# splash

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
splash/: analyzers.py  cli.py  loader.py  models.py  renderer.py
splash/templates/: _js_report_view.j2  _js_tenant_view.j2  _stack_view.j2  dashboard.html.j2
